--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "20.2.6",
     "@types/react": "18.2.10",
     "@types/react-dom": "18.2.4",
+    "@uiw/react-textarea-code-editor": "^1.4.4",
     "autoprefixer": "10.4.14",
     "encoding": "^0.1.13",
     "eslint": "8.42.0",
@@ -23,6 +24,7 @@
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.7",
     "next": "13.4.4",
+    "next-remove-imports": "^1.0.11",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
